fix: change overflow scroll to auto

--- a/web/src/components/pages/contribution/write/write.css
+++ b/web/src/components/pages/contribution/write/write.css
@@ -12,7 +12,7 @@
 
         @media (--xl-up) {
             height: 80%;
-            overflow: scroll;
+            overflow: auto;
         }
 
         & .write {
